openshift/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        imagePullPolicy: Always
        image: quay.io/tsrana/spring-boot-hello-world:quay
        ports:
        - containerPort: 8080
