openshift/hello-route.yaml
  kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    name: hello
    labels:
      app: hello
    annotations:
  spec:
    to:
      kind: Service
      name: hello
      weight: 100
    port:
      targetPort: 8080-tcp
  wildcardPolicy: None
